crates/ty_python_semantic/resources/mdtest/snapshots/invalid_argument_typ…_-_Invalid_argument_typ…_-_Invariant_generic_cl…_(7ff1d501c5f64fe9).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Invariant generic classes
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def modify(xs: list[int]):
2 |     xs.append(42)
3 | 
4 | xs: list[bool] = [True, False]
5 | modify(xs)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `modify` is incorrect
 --> src/mdtest_snippet.py:5:8
  |
4 | xs: list[bool] = [True, False]
5 | modify(xs)  # error: [invalid-argument-type]
  |        ^^ Expected `list[int]`, found `list[bool]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:1:5
  |
1 | def modify(xs: list[int]):
  |     ^^^^^^ ------------- Parameter declared here
2 |     xs.append(42)
  |
info: `list` is invariant in its type parameter
info: Consider using the covariant supertype `collections.abc.Sequence`
info: For more information, see https://docs.astral.sh/ty/reference/typing-faq/#invariant-generics

```
